--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
+    "express-handlebars": "^3.0.2",
+    "hbs": "^4.0.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
