--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.0.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.28.0"
   }
 }
